--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,47 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+body {
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande",      sans-serif;
+   font-weight: 300;
+}
+
+#logo {
+  float: left;
+  font-size: 2.0em;
+  letter-spacing: -1px;
+}
+
+.center {
+  text-align: center;
+}
+
+.jumbotron {
+  margin-top: 40px;
+}
+
+.jumbotron h1 {
+  margin-bottom: 50px;
+  font-weight: 300;
+}
+
+.footer {
+  maring-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
