--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,11 +1,4 @@
-<% if @article.errors.any? %>
-<h2>The following errors prevented the article from being created. </h2>
-  <ul>
-    <% @article.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
   <div class='row'>
     <div class='col-xs-12'>
       <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
@@ -34,4 +27,5 @@
     <div class="col-xs-4 col-xs-offset-4">
       <%= link_to "Cancel request and go back to articles listing", articles_path %>
     </div>
+  </div>
 </div>
