--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,6 +37,16 @@ body {
   padding-top: 5px;
 }
 
+.article-title {
+  font-size: 1.5em;
+}
+
+.article-body {
+  border-top: 1px, solid, #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 footer small {
   float: left;
 }
