--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,13 @@
-<h2 align="center">Title: <%= @article.title %></h2>
+<h2 align="center"><%= @article.title %></h2>
 <div class="well col-xs-8 col-xs-offset-2">
   <h4>Description</h4>
   <hr>
   <%= simple_format(@article.description) %>
+  <hr>
+  <h5>Created by: <%= link_to @article.user.username, user_path(@article.user) %></h5>
   <div class="article-actions">
     <%= link_to "Edit this article", edit_article_path(@article) %> |
-    <%= link_to "Delete this article", article_path(@article), method: :delete, 
+    <%= link_to "Delete this article", article_path(@article), method: :delete,
           data: {confirm: "Are you sure you want to delete this article?"} %> |
     <%= link_to "View all articles", articles_path %>
   </div>
